Upgrade to Polymer 0.5.5

--- a/progress-bubble.html
+++ b/progress-bubble.html
@@ -14,7 +14,7 @@
         <div id="content"><content></content></div>
     </template>
     <script>
-        Polymer("progress-bubble", {
+        Polymer({
             value: 0,
             max: 100,
             cx: 50,
