--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Simple test page for progress-bubble element</title>
-        <script src="../platform/platform.js"></script>
+        <script src="../webcomponentsjs/webcomponents.min.js"></script>
         <link rel="import" href="progress-bubble.html" />
 
         <style type="text/css">
