Change stroke-linecap to round

--- a/progress-bubble.html
+++ b/progress-bubble.html
@@ -8,6 +8,7 @@
                 stroke="{{stroke}}" stroke-width="{{strokeWidth}}"
                 stroke-dasharray="{{dasharray}}"
                 stroke-dashoffset="{{dashoffset}}"
+                stroke-linecap="round"
                 transform="{{transform}}" />
         </svg>
         <div id="reflection"></div>
