Display different stroke widths in the demo

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
     </head>
     <body>
         <progress-bubble></progress-bubble>
-        <progress-bubble></progress-bubble>
-        <progress-bubble></progress-bubble>
-        <progress-bubble></progress-bubble>
-        <progress-bubble></progress-bubble>
-        <progress-bubble></progress-bubble>
+        <progress-bubble strokeWidth="7"></progress-bubble>
+        <progress-bubble strokeWidth="8"></progress-bubble>
+        <progress-bubble strokeWidth="9"></progress-bubble>
+        <progress-bubble strokeWidth="10"></progress-bubble>
+        <progress-bubble strokeWidth="11"></progress-bubble>
 
         <script type="text/javascript">
             NodeList.prototype.forEach = Array.prototype.forEach;  // Haxor.
