--- a/progress-bubble.html
+++ b/progress-bubble.html
@@ -4,6 +4,8 @@
     <template>
         <link rel="stylesheet" href="progress-bubble.css" />
         <svg id="progressArc" width="100%" height="100%">
+            <circle r="{{radius}}" cx="{{cx}}" cy="{{cy}}" fill="transparent"
+                    stroke="rgba(255, 255, 255, 0.1)" stroke-width="{{strokeWidth}}" />
             <circle id="svgCircle" r="{{radius}}" cx="{{cx}}" cy="{{cy}}" fill="transparent"
                 stroke="{{stroke}}" stroke-width="{{strokeWidth}}"
                 stroke-dasharray="{{dasharray}}"
