--- a/progress-bubble.html
+++ b/progress-bubble.html
@@ -1,46 +1,125 @@
 <link rel="import" href="../polymer/polymer.html">
 
-<polymer-element name="progress-bubble" attributes="value max stroke strokeWidth">
+<dom-module id="progress-bubble">
+    <style>
+        :host {
+            display: block;
+            width: 100px;
+            height: 100px;
+            margin: 10px;
+            position: relative;
+            background: radial-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.2));
+            border-radius: 50%;
+            font-size: 24px;
+            text-shadow: 0 2px 2px rgba(0, 0, 0, 0.8);
+            color: #fff;
+        }
+        #reflection {
+            width: 25%;
+            height: 25%;
+            background: url("reflection.svg") top left no-repeat;
+            display: block;
+            position: absolute;
+            top: 14%;
+            left: 15%;
+            background-size: contain;
+        }
+        #content {
+            width: 100%;
+            height: 100%;
+            display: -webkit-flex;
+            display: flex;
+            -webkit-flex-direction: column;
+            flex-direction: column;
+            -webkit-align-items: center;
+            align-items: center;
+            -webkit-justify-content: center;
+            justify-content: center;
+        }
+        svg {
+            position: absolute;
+            top: 0;
+            left: 0;
+        }
+        #svgCircle {
+            transition: stroke-dashoffset 200ms;
+        }
+    </style>
     <template>
-        <link rel="stylesheet" href="progress-bubble.css" />
         <svg id="progressArc" width="100%" height="100%">
-            <circle r="{{radius}}" cx="{{cx}}" cy="{{cy}}" fill="transparent"
-                    stroke="rgba(255, 255, 255, 0.1)" stroke-width="{{strokeWidth}}" />
-            <circle id="svgCircle" r="{{radius}}" cx="{{cx}}" cy="{{cy}}" fill="transparent"
-                stroke="{{stroke}}" stroke-width="{{strokeWidth}}"
-                stroke-dasharray="{{dasharray}}"
-                stroke-dashoffset="{{dashoffset}}"
+            <circle r$="[[_radius]]" cx$="[[_cx]]" cy$="[[_cy]]" fill="transparent"
+                    stroke="rgba(255, 255, 255, 0.1)" stroke-width$="[[strokeWidth]]" />
+            <circle id="svgCircle" r$="[[_radius]]" cx$="[[_cx]]" cy$="[[_cy]]" fill="transparent"
+                stroke$="[[stroke]]" stroke-width$="[[strokeWidth]]"
+                stroke-dasharray$="[[_dasharray]]"
+                stroke-dashoffset$="[[_dashoffset]]"
                 stroke-linecap="round"
-                transform="{{transform}}" />
+                transform$="[[_transform]]" />
         </svg>
         <div id="reflection"></div>
         <div id="content"><content></content></div>
     </template>
-    <script>
-        Polymer({
-            value: 0,
-            max: 100,
-            cx: 50,
-            cy: 50,
-            strokeWidth: 6,
-            stroke: "rgba(0, 240, 45, 0.8)",
-            radius: 22,
-            transform: "rotate(-90, 100, 100)",
-            dasharray: 138.23007676,
-            dashoffset: 138.23007676,
+</dom-module>
+<script>
+    Polymer({
+        is: 'progress-bubble',
 
-            redraw: function() {
-                this.cx = this.clientWidth / 2;
-                this.cy = this.clientHeight / 2;
-                this.radius = Math.min(this.cx, this.cy) - this.strokeWidth / 2;
-                this.transform = "rotate(-90, " + this.cx + ", " + this.cy + ")";
-                this.dasharray = 2 * Math.PI * this.radius;
-                this.dashoffset = (1 - this.value / this.max) * this.dasharray;
+        properties: {
+            value: {
+                type: Number,
+                value: 0
             },
-            ready: function() { this.redraw(); },
-            strokeChanged: function() { this.redraw(); },
-            valueChanged: function() { this.redraw(); },
-            maxChanged: function() { this.redraw(); }
-        });
-    </script>
-</polymer-element>
+            max: {
+                type: Number,
+                value: 100
+            },
+            stroke: {
+                type: String,
+                value: 'rgba(0, 240, 45, 0.8)'
+            },
+            strokeWidth: {
+                type: Number,
+                value: 6
+            },
+            _cx: {
+                type: Number,
+                value: 50
+            },
+            _cy: {
+                type: Number,
+                value: 50
+            },
+            _radius: {
+                type: Number,
+                value: 22
+            },
+            _transform: {
+                type: String,
+                value: "rotate(-90, 100, 100)"
+            },
+            _dasharray: {
+                type: Number,
+                value: 138.23007676
+            },
+            _dashoffset: {
+                type: Number,
+                value: 138.23007676
+            }
+        },
+
+        redraw: function() {
+            this._cx = this.clientWidth / 2;
+            this._cy = this.clientHeight / 2;
+            this._radius = Math.max(0, Math.min(this._cx, this._cy) - this.strokeWidth / 2);
+            this._transform = "rotate(-90, " + this._cx + ", " + this._cy + ")";
+            this._dasharray = 2 * Math.PI * this._radius;
+            this._dashoffset = (1 - this.value / this.max) * this._dasharray;
+        },
+        ready: function() {
+            this.redraw();
+        },
+        attributeChanged: function() {
+            this.redraw();
+        }
+    });
+</script>
