--- a/index.html
+++ b/index.html
@@ -13,38 +13,45 @@
             }
             body {
                 background: #222;
-                background-size: cover;
                 font-family: "Open Sans", Helvetica, sans-serif;
+            }
+        </style>
+        <style is="custom-style">
+            progress-bubble:nth-child(even) {
+                --progress-bubble-stroke-color: rgba(255, 0, 0, 0.8);
             }
         </style>
     </head>
     <body>
-        <progress-bubble></progress-bubble>
-        <progress-bubble strokeWidth="7"></progress-bubble>
+        <progress-bubble strokeWidth="2"></progress-bubble>
+        <progress-bubble strokeWidth="4"></progress-bubble>
+        <progress-bubble strokeWidth="6"></progress-bubble>
         <progress-bubble strokeWidth="8"></progress-bubble>
-        <progress-bubble strokeWidth="9"></progress-bubble>
         <progress-bubble strokeWidth="10"></progress-bubble>
-        <progress-bubble strokeWidth="11"></progress-bubble>
+        <progress-bubble strokeWidth="12"></progress-bubble>
 
         <script type="text/javascript">
             NodeList.prototype.forEach = Array.prototype.forEach;  // Haxor.
 
             document.querySelectorAll("progress-bubble").forEach(function(e, i) {
                 e.style.left = (i * 180) + "px";
-                e.style.width = (60 + i * 15) + "px";
+                e.style.width = (50 + i * 15) + "px";
                 e.style.height = e.style.width;
-                e.style.fontSize = (i + 6) * 3 + "px";
+                e.style.fontSize = (i + 4) * 3 + "px";
             });
 
             var x = 0;
             window.setInterval(function() {
                 document.querySelectorAll("progress-bubble").forEach(function(e) {
-                    e.value = x;
-                    e.textContent = x + "%";
+                    e.value = e.value + Math.ceil(Math.random() * 5);
+                    if (e.value > 100) {
+                        e.value = 0;
+                    }
+
+                    // The textContent must be changed with Polymer DOM API.
+                    Polymer.dom(e).textContent = e.value + '%';
                 });
-                x += 10;
-                if (x > 100) { x = 0; }
-            }, 500);
+            }, 100);
         </script>
 
     </body>
