--- a/progress-bubble.html
+++ b/progress-bubble.html
@@ -14,6 +14,14 @@
             text-shadow: 0 2px 2px rgba(0, 0, 0, 0.8);
             color: #fff;
         }
+        svg, div {
+            opacity: 0;
+            transition: opacity 150ms;
+        }
+        :host.calculation-ready svg,
+        :host.calculation-ready div{
+            opacity: 1;
+        }
         #reflection {
             width: 25%;
             height: 25%;
@@ -42,15 +50,16 @@
             left: 0;
         }
         #svgCircle {
-            transition: stroke-dashoffset 200ms;
+            transition: stroke-dashoffset 150ms;
+            stroke: var(--progress-bubble-stroke-color, rgba(0, 240, 45, 0.8));
         }
     </style>
     <template>
         <svg id="progressArc" width="100%" height="100%">
             <circle r$="[[_radius]]" cx$="[[_cx]]" cy$="[[_cy]]" fill="transparent"
-                    stroke="rgba(255, 255, 255, 0.1)" stroke-width$="[[strokeWidth]]" />
+                    stroke="rgba(255, 255, 255, 0.1)" stroke-width$="[[strokewidth]]" />
             <circle id="svgCircle" r$="[[_radius]]" cx$="[[_cx]]" cy$="[[_cy]]" fill="transparent"
-                stroke$="[[stroke]]" stroke-width$="[[strokeWidth]]"
+                stroke-width$="[[strokewidth]]"
                 stroke-dasharray$="[[_dasharray]]"
                 stroke-dashoffset$="[[_dashoffset]]"
                 stroke-linecap="round"
@@ -73,11 +82,7 @@
                 type: Number,
                 value: 100
             },
-            stroke: {
-                type: String,
-                value: 'rgba(0, 240, 45, 0.8)'
-            },
-            strokeWidth: {
+            strokewidth: {
                 type: Number,
                 value: 6
             },
@@ -91,32 +96,43 @@
             },
             _radius: {
                 type: Number,
-                value: 22
+                computed: '_computeRadius(_cx, _cy, strokewidth)'
             },
             _transform: {
                 type: String,
-                value: "rotate(-90, 100, 100)"
+                computed: '_computeTransform(_cx, _cy)'
             },
             _dasharray: {
                 type: Number,
-                value: 138.23007676
+                computed: '_computeDashArray(_radius)'
             },
             _dashoffset: {
                 type: Number,
-                value: 138.23007676
+                computed: '_computeDashOffset(value, max, _dasharray)'
             }
         },
-
+        _computeRadius: function(_cx, _cy, strokewidth) {
+            return Math.max(0, Math.min(_cx, _cy) - strokewidth / 2);
+        },
+        _computeDashArray: function(_radius) {
+            return 2 * Math.PI * _radius;
+        },
+        _computeDashOffset: function(value, max, _dasharray) {
+            return (1 - value / max) * _dasharray;
+        },
+        _computeTransform: function(_cx, _cy) {
+            return 'rotate(-90, ' + _cx + ', ' + _cy + ')';
+        },
         redraw: function() {
             this._cx = this.clientWidth / 2;
             this._cy = this.clientHeight / 2;
-            this._radius = Math.max(0, Math.min(this._cx, this._cy) - this.strokeWidth / 2);
-            this._transform = "rotate(-90, " + this._cx + ", " + this._cy + ")";
-            this._dasharray = 2 * Math.PI * this._radius;
-            this._dashoffset = (1 - this.value / this.max) * this._dasharray;
+
+            // Keep the content invisible before first calculation is done.
+            this.classList.add('calculation-ready');
         },
-        ready: function() {
-            this.redraw();
+        attached: function() {
+            // Must use this.async in order to have clientWidth/clientHeight available.
+            this.async(this.redraw, 100);
         },
         attributeChanged: function() {
             this.redraw();
