Change strokeWidth attribute to stroke-width

--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
         </style>
     </head>
     <body>
-        <progress-bubble strokeWidth="2"></progress-bubble>
-        <progress-bubble strokeWidth="4"></progress-bubble>
-        <progress-bubble strokeWidth="6"></progress-bubble>
-        <progress-bubble strokeWidth="8"></progress-bubble>
-        <progress-bubble strokeWidth="10"></progress-bubble>
-        <progress-bubble strokeWidth="12"></progress-bubble>
+        <progress-bubble stroke-width="2"></progress-bubble>
+        <progress-bubble stroke-width="4"></progress-bubble>
+        <progress-bubble stroke-width="6"></progress-bubble>
+        <progress-bubble stroke-width="8"></progress-bubble>
+        <progress-bubble stroke-width="10"></progress-bubble>
+        <progress-bubble stroke-width="12"></progress-bubble>
 
         <script type="text/javascript">
             NodeList.prototype.forEach = Array.prototype.forEach;  // Haxor.
