--- a/progress-bubble.html
+++ b/progress-bubble.html
@@ -57,9 +57,9 @@
     <template>
         <svg id="progressArc" width="100%" height="100%">
             <circle r$="[[_radius]]" cx$="[[_cx]]" cy$="[[_cy]]" fill="transparent"
-                    stroke="rgba(255, 255, 255, 0.1)" stroke-width$="[[strokewidth]]" />
+                    stroke="rgba(255, 255, 255, 0.1)" stroke-width$="[[strokeWidth]]" />
             <circle id="svgCircle" r$="[[_radius]]" cx$="[[_cx]]" cy$="[[_cy]]" fill="transparent"
-                stroke-width$="[[strokewidth]]"
+                stroke-width$="[[strokeWidth]]"
                 stroke-dasharray$="[[_dasharray]]"
                 stroke-dashoffset$="[[_dashoffset]]"
                 stroke-linecap="round"
@@ -82,7 +82,7 @@
                 type: Number,
                 value: 100
             },
-            strokewidth: {
+            strokeWidth: {
                 type: Number,
                 value: 6
             },
@@ -96,7 +96,7 @@
             },
             _radius: {
                 type: Number,
-                computed: '_computeRadius(_cx, _cy, strokewidth)'
+                computed: '_computeRadius(_cx, _cy, strokeWidth)'
             },
             _transform: {
                 type: String,
@@ -111,8 +111,8 @@
                 computed: '_computeDashOffset(value, max, _dasharray)'
             }
         },
-        _computeRadius: function(_cx, _cy, strokewidth) {
-            return Math.max(0, Math.min(_cx, _cy) - strokewidth / 2);
+        _computeRadius: function(_cx, _cy, strokeWidth) {
+            return Math.max(0, Math.min(_cx, _cy) - strokeWidth / 2);
         },
         _computeDashArray: function(_radius) {
             return 2 * Math.PI * _radius;
