Add --progress-bubble-stroke-linecap CSS property, fixes #2

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             progress-bubble:nth-child(even) {
                 text-shadow: none;
                 --progress-bubble-stroke-color: rgba(255, 0, 0, 0.8);
+                --progress-bubble-stroke-linecap: butt;
                 --progress-bubble-bg-stroke-color: rgba(193, 193, 193, 0.2);
                 --progress-bubble-background: transparent;
                 --progress-bubble-reflection-display: none;
