Add a parameter to change the angle of the progess bar

--- a/progress-bubble.html
+++ b/progress-bubble.html
@@ -92,6 +92,10 @@
                 type: Number,
                 value: 50
             },
+            alpha: {
+                type: Number,
+                value: -90
+            },
             _radius: {
                 type: Number,
                 computed: '_computeRadius(_cx, _cy, strokeWidth)'
@@ -118,8 +122,8 @@
         _computeDashOffset: function(value, max, _dasharray) {
             return (1 - value / max) * _dasharray;
         },
-        _computeTransform: function(_cx, _cy) {
-            return 'rotate(-90, ' + _cx + ', ' + _cy + ')';
+        _computeTransform: function(_cx, _cy, alpha) {
+            return 'rotate(' + alpha + ', ' + _cx + ', ' + _cy + ')';
         },
         redraw: function() {
             this._cx = this.clientWidth / 2;
