Add a parameter to change the angle of the progess bar

--- a/progress-bubble.html
+++ b/progress-bubble.html
@@ -102,7 +102,7 @@
             },
             _transform: {
                 type: String,
-                computed: '_computeTransform(_cx, _cy)'
+                computed: '_computeTransform(_cx, _cy, alpha)'
             },
             _dasharray: {
                 type: Number,
