--- a/demo/index.html
+++ b/demo/index.html
@@ -1,23 +1,27 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Simple test page for progress-bubble element</title>
-    <script src="../webcomponentsjs/webcomponents.min.js"></script>
-    <script>
-      // window.Polymer = window.Polymer || {};
-      // window.Polymer.dom = 'shadow';
-    </script>
-    <link rel="import" href="progress-bubble.html" />
+    <title>&lt;progress-bubble&gt;</title>
+    <script src="../webcomponentsjs/webcomponents-lite.min.js"></script>
+    <link rel="import" href="../progress-bubble.html">
 
     <style type="text/css">
-      progress-bubble {
-        position: absolute;
-        top: 100px;
-        margin-left: 100px;
+      html,
+      body {
+        width: 100%;
+        height: 100%;
       }
       body {
         background: #222;
+        background: radial-gradient(#333, #000);
         font-family: "Open Sans", Helvetica, sans-serif;
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: center;
+      }
+      progress-bubble {
+        margin-right: 32px;
       }
     </style>
     <style is="custom-style">
@@ -40,10 +44,7 @@
     <progress-bubble stroke-width="12"></progress-bubble>
 
     <script type="text/javascript">
-      NodeList.prototype.forEach = Array.prototype.forEach;  // Haxor.
-
-      document.querySelectorAll("progress-bubble").forEach(function(e, i) {
-        e.style.left = (i * 180) + "px";
+      Array.prototype.forEach.call(document.querySelectorAll("progress-bubble"), function(e, i) {
         e.style.width = (50 + i * 15) + "px";
         e.style.height = e.style.width;
         e.style.fontSize = (i + 4) * 3 + "px";
@@ -51,7 +52,7 @@
 
       var x = 0;
       window.setInterval(function() {
-        document.querySelectorAll("progress-bubble").forEach(function(e) {
+        Array.prototype.forEach.call(document.querySelectorAll("progress-bubble"), function(e) {
           e.value = e.value + Math.ceil(Math.random() * 5);
           if (e.value > 100) {
             e.value = 0;
