--- a/progress-bubble.html
+++ b/progress-bubble.html
@@ -93,6 +93,10 @@
         type: Number,
         value: 6
       },
+      angle: {
+        type: Number,
+        value: -90
+      },
       _cx: {
         type: Number,
         value: 50
@@ -107,7 +111,7 @@
       },
       _transform: {
         type: String,
-        computed: '_computeTransform(_cx, _cy)'
+        computed: '_computeTransform(angle, _cx, _cy)'
       },
       _dasharray: {
         type: Number,
@@ -127,8 +131,8 @@
     _computeDashOffset: function(value, max, _dasharray) {
       return (1 - value / max) * _dasharray;
     },
-    _computeTransform: function(_cx, _cy) {
-      return 'rotate(-90, ' + _cx + ', ' + _cy + ')';
+    _computeTransform: function(angle, _cx, _cy) {
+      return 'rotate(' + angle + ', ' + _cx + ', ' + _cy + ')';
     },
     redraw: function() {
       this._cx = this.clientWidth / 2;
