--- a/demo/index.html
+++ b/demo/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>&lt;progress-bubble&gt;</title>
-    <script src="../webcomponentsjs/webcomponents-lite.min.js"></script>
+    <script src="../../webcomponentsjs/webcomponents-lite.min.js"></script>
     <link rel="import" href="../progress-bubble.html">
 
     <style type="text/css">
