--- a/progress-bubble.html
+++ b/progress-bubble.html
@@ -73,7 +73,7 @@
           transform$="[[_transform]]" />
     </svg>
     <div id="reflection"></div>
-    <div id="content"><content></content></div>
+    <div id="content"><slot></slot></div>
   </template>
 </dom-module>
 <script>
